Add the .gitignore file

--- a/welcome.html
+++ b/welcome.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>"Hello World!"</h1>
-    <h3>Hi Everybody!</h3>
+    <h4>Hi Everybody!</h4>
     <a href="http://codeup.com" target="blank">Codeup</a>
 </body>
-</html>
+</head>
