--- a/welcome.html
+++ b/welcome.html
@@ -3,10 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="css/style.css">
+            <link href="https://fonts.googleapis.com/css?family=Geo" rel="stylesheet">
 </head>
-<body>
-    <h1>"Hello World!"</h1>
-    <h4>Hi Everybody!</h4>
-    <a href="http://codeup.com" target="blank">Codeup</a>
+<body id="top">
+
+
+
+<h1>Welcome to Verdian Dynamics!</h1>
+    <h5>At Verdian Dynamics <strong>we</strong> solve <em>your</em> problems with <em>technology</em>.</h5>
+    <hr>
+    <h2>Core Values</h2>
+
+    <ul>
+        <li>Competence</li>
+        <li>Involvement</li>
+        <li>Technology</li>
+    </ul>
+
+    <h2>Our Process</h2>
+
+    <ol>
+        <li>Plan</li>
+        <li>Evaluate</li>
+        <li>Implement</li>
+    </ol>
+
+    <h2>2020 Vision</h2>
+
+    <ul>
+        <li>Become #1 in Technology</li>
+        <li>Increase Success by 20%</li>
+        <li>Increase Business by 30%</li>
+
+    </ul>
+    <hr>
+    <h2>Company Vision</h2>
+    <img src="img/Voltron.jpg">
+    <img style="width:448px;height:252px" src="img/thundercats.jpg">
+    <img style="width:448px;height:252px"src="img/qbert.png" alt="qbert">
+    <img style="width:448px;height:252px"src="img/he man.jpg" alt="he man">
+    <h2>Our Product</h2>
+
+    <table>
+        <tr>
+            <th>Plan</th>
+            <th>Price</th>
+            <th>Features</th>
+        </tr>
+        <tr>
+            <td>Starter</td>
+            <td>$99</td>
+            <td>Base Technology</td>
+        </tr>
+        <tr>
+            <td>Advanced</td>
+            <td>$199</td>
+            <td>Additional Features</td>
+        </tr>
+        <tr>
+            <td>Premium</td>
+            <td>$499</td>
+            <td>Unlimited Support</td>
+        </tr>
+    </table>
+
+    <h1><a href id="top">Top of the Page</a></h1>
 </body>
-</head>
+</html>
