--- a/pizza delivery form.html
+++ b/pizza delivery form.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Pizza Delivery Form</title>
+    <link rel="stylesheet" href="pizza delivery.css">
 </head>
 <body>
 <form>
     <h1>Pizza Delivery</h1>
+
     <form method="Post" action="https://requestb.in/1lfo4td1">
         <label for="pepperoni">
         <input id="pepperoni" type="radio" name="specials" value="pepperoni">
@@ -26,7 +28,49 @@
            <input id="meat lovers" type="radio" name="specials" value="meat lovers">
             Meat lovers
     </label>
+
+        <br>
+
+        <label for="veggie">
+            <input id="veggie" type="radio" name="specials" value="veggie">
+            Veggie
+        </label>
+
+        <br>
+
+        <label for="salads">
+            <input is="salads" type="radio" name="specials" value="salads">
+                   Salads
+        </label>
 </form>
+
+    <table>
+        <tr>
+            <th>Pepperroni &nbsp &nbsp</th>
+            <th>Plain &nbsp &nbsp</th>
+            <th>Meat Lovers &nbsp &nbsp</th>
+            <th>Veggie</th>
+        </tr>
+    </table>
+
+    <img style="width:250px; height:193px"src="img/pepperoni.jpeg">
+    <img style="width:200px; height:193px" src="img/plain.jpeg">
+    <img src="img/meat lovers.jpeg">
+    <img style="width:250px; height:193px" src="img/veggie.jpeg"
+
+    <br>
+
+    <p>
+        $5.00 box fee for 37" Pizza
+        <br>
+        No Discounts, Returns or Exchanges Apply on 37" or 42"
+        <br>
+        Dough and all sauces made fresh daily in our kitchen.
+        <br>
+        On Busy days please allow up to two hours for larger pizzas.
+    </p>
+
+
 
 </body>
 </html>
