--- a/css_box_model.html
+++ b/css_box_model.html
@@ -8,13 +8,11 @@
 <body>
 <h1>Visible Spectrum Wavelengths</h1>
 
-<div id="box-red"class="box">620-750 nm</div>
-<div id="box-orange" class="box">590-620 nm</div>
+<div class="box-red box">620-750 nm</div>
+<div class="box-orange box">590-620 nm</div>
 <div id="box-yellow" class="box">570-590 nm</div>
 <div id="box-green" class="box">495-570 nm</div>
 <div id="box-blue" class="box">450-495 nm</div>
 <div id="box-violet" class="box">380-450 nm</div>
-
-
 </body>
 </html>
