--- a/order-pizza.html
+++ b/order-pizza.html
@@ -1,10 +1,275 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <!--<link rel="stylesheet" href="css/bootstrap.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+
+    <!-- custom styles go here -->
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-$END$
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Pizza World</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Order online <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Menu</a></li>
+                <!--<li class="dropdown">-->
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="#">Action</a></li>-->
+                        <!--<li><a href="#">Another action</a></li>-->
+                        <!--<li><a href="#">Something else here</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
+                        <!--<li><a href="#">Separated link</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
+                        <!--<li><a href="#">One more separated link</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
+            </ul>
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Zip Code">
+                </div>
+                <button type="submit" class="btn btn-default">Search Stores Near You</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <!--<li><a href="#">Link</a></li>-->
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Sign Up<span class="caret"></span></a>
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="#">Action</a></li>-->
+                        <!--<li><a href="#">Another action</a></li>-->
+                        <!--<li><a href="#">Something else here</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
+                        <!--<li><a href="#">Separated link</a></li>-->
+                    <!--</ul>-->
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+<div class="jumbotron">
+   <h1>Welcome to Pizza World!</h1>
+    <!--<p>...</p>-->
+    <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>-->
+</div>
+
+
+<h2> Build Your Own Pizza!</h2>
+
+<ul class="nav nav-tabs">
+    <li role="presentation" class="active"><a href="#"><span class="badge">1</span> Size and Crust</a></li>
+    <li role="presentation"><a href="#"><span class="badge">2</span> Cheese and Sauce</a></li>
+    <li role="presentation"><a href="#"><span class="badge">3</span> Toppings</a></li>
+</ul>
+
+
+<div class="panel panel-default">
+    <div class="panel-body">
+        Choose Size and Crust
+    </div>
+
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <!--Basic panel example-->
+            <ul class="list-group">
+                <li class="list-group-item">Hand tossed</li>
+                <li class="list-group-item">Garlic-seasoned crust with a rich, buttery taste.</li>
+                <li class="list-group-item list-group-item-info"><div class="radio">
+                    <label>
+                        <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                        <!--Option two can be something else and selecting it will deselect option one-->
+                        Medium (10")
+                    </label>
+                </div>
+                <li class="list-group-item list-group-item-info"><div class="radio">
+                <label>
+                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                    <!--Option two can be something else and selecting it will deselect option one-->
+                    Medium (12")
+                </label>
+            </div></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <!--Basic panel example-->
+            <ul class="list-group">
+                <li class="list-group-item">Crunchy thin crust</li>
+                <li class="list-group-item">Thin enough for the optimum crispy to crunchy ratio.</li>
+                <li class="list-group-item list-group-item-info"><div class="radio">
+                    <label>
+                        <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                        <!--Option two can be something else and selecting it will deselect option one-->
+                        Medium (12")
+                    </label>
+                </div></li>
+                <li class="list-group-item list-group-item-info"><div class="radio">
+                    <label>
+                        <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                        <!--Option two can be something else and selecting it will deselect option one-->
+                        Larger (14")
+                    </label>
+                </div></li>
+            </ul>
+        </div>
+        <div class="panel-footer text-right">
+            <button class="btn btn-primary">
+                Next step
+                <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
+            </button>
+        </div>
+    </div>
+</div>
+
+<!--&lt;!&ndash;<p class="text-right">&ndash;&gt;-->
+    <!--<button type="button" class="btn btn-default" aria-label="Left Align">-->
+        <!--Next Step-->
+    <!--&lt;!&ndash;<span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span>&ndash;&gt;-->
+        <!--<span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>-->
+<!--</button>-->
+<!--&lt;!&ndash;</p>&ndash;&gt;-->
+
+<div class="panel panel-default">
+    <div class="panel-body">
+        Cheese and Sauce
+        <ul class="list-group">
+        <li class="list-group-item panel-footer">Cheese?</li>
+        <li class="list-group-item">Cheese<select class="form-control">
+            <option>Light</option>
+            <option>Normal</option>
+            <option>Extra</option>
+            <option>Double</option>
+        </select></li>
+    </ul>
+
+        <ul class="list-group">
+            <li class="list-group-item panel-footer">Sauce?</li>
+            <li class="list-group-item">Sauce<select class="form-control">
+                <option>Tomato Sauce</option>
+                <option>Marinara Sauce</option>
+                <option>BBQ Sauce</option>
+                <option>Alfredo Sauce</option>
+            </select>
+            </li>
+            <li class="list-group-item">Sauce<select class="form-control">
+                <option>Light</option>
+                <option>Normal</option>
+                <option>Extra</option>
+            </select>
+            </li>
+            </ul>
+
+
+            </div>
+</div>
+
+<div class="panel-footer text-right" class="btn-group" role="group" aria-label="...">
+    <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>Previous Step</button>
+    <button type="button" class="btn btn-primary">Next Step<span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></button>
+</div>
+
+<div class="panel panel-default">
+    <div class="panel-body">
+Choose Toppings
+<ul class="list-group">
+    <li class="list-group-item panel-footer">Choose Meats</li>
+    <!--<li class="list-group-item">Cheese<select class="form-control">-->
+    <li class="list-group-item list-group-item-info">
+        <div class="checkbox">
+            <label><input type="checkbox" value="">Beef</label>
+        </div>
+    </li>
+    <li class="list-group-item list-group-item-info">
+        <div class="checkbox">
+            <label>
+            <input type="checkbox" value="">Ham
+                <!--Option one is this and that&mdash;be sure to include why it's great-->
+            </label>
+        </div>
+    </li>
+
+    <li class="list-group-item list-group-item-info">
+        <div class="checkbox">
+                <label>
+            <input type="checkbox" value="">Philly Steak
+                    <!--Option one is this and that&mdash;be sure to include why it's great-->
+            </label>
+        </div>
+    </li>
+
+    <li class="list-group-item list-group-item-info">
+            <div class="checkbox">
+                    <label>
+            <input type="checkbox" value="">Bacon
+                        <!--Option one is this and that&mdash;be sure to include why it's great-->
+            </label>
+            </div>
+    </li>
+</ul>
+
+        <div class="panel panel-default">
+            <div class="panel-body panel-footer">
+                Choose Non Meats
+            </div>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-info"><div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="">Green Peppers
+                        <!--Option one is this and that&mdash;be sure to include why it's great-->
+                    </label>
+                </li>
+                <li class="list-group-item list-group-item-info"><div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="">Onions
+                        <!--Option one is this and that&mdash;be sure to include why it's great-->
+                    </label>
+                </li>
+                <li class="list-group-item list-group-item-info"><div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="">Onions
+                        <!--Option one is this and that&mdash;be sure to include why it's great-->
+                    </label>
+                </li>
+                <li class="list-group-item list-group-item-info"><div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="">Jalapeño Peppers
+                        <!--Option one is this and that&mdash;be sure to include why it's great-->
+                    </label>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="text-right">
+    <button class="btn btn-primary">
+        Checkout
+        <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+    </button>
+</div>
+
+
 </body>
 </html>
