--- a/grid-layout.html
+++ b/grid-layout.html
@@ -1,10 +1,61 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Grids</title>
+
+    <link rel="stylesheet" href="css/grid-layout.css">
+
+    <div class="container">
+
+        <div class="row spacing">
+            <div class="column one-half">1/2</div>
+            <div class="column one-half">1/2</div>
+        </div>
+
+        <div class="row spacing">
+            <div class="column one-third">1/3</div>
+            <div class="column one-third">1/3</div>
+            <div class="column one-third">1/3</div>
+        </div>
+
+        <div class="row spacing">
+
+            <div class="column one-forth">1/4</div>
+            <div class="column one-forth">1/4</div>
+            <div class="column one-forth">1/4</div>
+            <div class="column one-forth">1/4</div>
+        </div>
+
+        <div class="row spacing">
+
+            <div class="column one-sixth">1/6</div>
+            <div class="column one-sixth">1/6</div>
+            <div class="column one-sixth">1/6</div>
+            <div class="column one-sixth">1/6</div>
+            <div class="column one-sixth">1/6</div>
+            <div class="column one-sixth">1/6</div>
+        </div>
+
+        <div class="row spacing">
+
+            <div class="column one-eighth">1/8</div>
+            <div class="column one-eighth">1/8</div>
+            <div class="column one-eighth">1/8</div>
+            <div class="column one-eighth">1/8</div>
+            <div class="column one-eighth">1/8</div>
+            <div class="column one-eighth">1/8</div>
+            <div class="column one-eighth">1/8</div>
+            <div class="column one-eighth">1/8</div>
+        </div>
+
+     </div>
+
 </head>
 <body>
-$END$
+
 </body>
 </html>
